<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".view.SettingsActivity" >
 
<LinearLayout 
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical">

    <TextView
        android:id="@+id/tvOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/settings_selfie_text" />
    
    <CheckBox
        android:id="@+id/chkGhost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/chk_ghost" />
		
    <CheckBox
        android:id="@+id/chkGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/chk_gray" />

    <CheckBox
        android:id="@+id/chkBlur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"        
        android:gravity="center"
        android:text="@string/chk_blur" />
    
    <CheckBox
        android:id="@+id/chkDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"   
        android:gravity="center"     
        android:text="@string/chk_dark" />
    
    <CheckBox
        android:id="@+id/chkActivateReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"   
        android:gravity="center"     
        android:text="@string/chk_activate_reminder" />    
    
    <TextView
        android:id="@+id/textTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/settings_time_picker" />    

    <TimePicker
        android:id="@+id/reminderTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:addStatesFromChildren="true" />

</LinearLayout>
    
</ScrollView>    

