<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.LoginScreenActivity"     
    android:orientation="vertical" >

  <LinearLayout 
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_gravity="center"
  android:orientation="vertical">    
 
    <ImageView
        android:id="@+id/ghostMySelfieLogo"
        android:layout_width="fill_parent"
        android:layout_height="244dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/desc"
        android:scaleType="fitCenter"
        android:src="@drawable/ghost_my_selfie_logo" />
      
    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_user" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_pass"
        android:inputType="textPassword" />
  </LinearLayout>
    
  <LinearLayout 
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_gravity="bottom|center"
  android:orientation="horizontal"> 
    
	<Button
	    android:id="@+id/loginButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@drawable/buttonshape"
	    android:shadowColor="#A8A8A8"
	    android:shadowDx="0"
	    android:shadowDy="0"
	    android:shadowRadius="3"
	    android:text="@string/login_sign"
	    android:textColor="#FFFFFF"
	    android:textSize="25sp"
	    android:layout_margin="5dp" />
	    
	<Button
	    android:id="@+id/signUpButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@drawable/buttonshape"
	    android:shadowColor="#A8A8A8"
	    android:shadowDx="0"
	    android:shadowDy="0"
	    android:shadowRadius="3"
	    android:text="@string/signup_sign"
	    android:textColor="#FFFFFF"
	    android:textSize="25sp"
	    android:layout_margin="5dp" />
    
  </LinearLayout>
    
</LinearLayout>    

</ScrollView>